clang/test/BSC/Negative/InitAnalysis/init-ensure-init-if-ret-multi-param.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Regression: two distinct ensure_init_if_ret parameters that fail the same
// way at the same return site must BOTH be reported. The diagnostic dedup
// key includes the parameter name, so the second one is not collapsed away.

int both_uninit(int *__attribute__((ensure_init_if_ret(0))) a,
                int *__attribute__((ensure_init_if_ret(0))) b) {
    return 0; // expected-error {{'*a' not initialized at return in __attribute__((ensure_init_if_ret(0))) function}} expected-error {{'*b' not initialized at return in __attribute__((ensure_init_if_ret(0))) function}}
}

// One initialized, one not: only the uninitialized one is reported.
int one_uninit(int *__attribute__((ensure_init_if_ret(0))) a,
               int *__attribute__((ensure_init_if_ret(0))) b) {
    *a = 1;
    return 0; // expected-error {{'*b' not initialized at return in __attribute__((ensure_init_if_ret(0))) function}}
}
